Jade Refactoring:  - Moved instrument-descriptors out of instrument codebases  - Moved all instrument-descriptors under jade configuration directory  - Removed InstrumentDescriptorService  - Refactored domain model:    - Removed ParticipantInterview as it is unecessary    - InstrumentParameters are associated to InstrumentType    - InstrumentRun is associated to InstrumentType  - Instrument selection step can now take place after contraindications steps